Agrega validacion de correo e interfaz de biblioteca